# noteration

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: user_guide.md
noteration/: __main__.py  app.py  config.py
noteration/db/: layout_engine.py  link_graph.py
noteration/dialogs/: conflict_dialog.py  help_dialog.py  new_note.py  new_vault.py  settings_dialog.py  vault_picker.py
noteration/editor/: citation_completer.py  find_replace.py  syntax_highlighter.py  wiki_links.py
noteration/literature/: bibtex_export.py  doi_fetcher.py  papis_bridge.py
noteration/pdf/: annotation_overlay.py  annotations.py  pdf_index.py  reader.py
noteration/search/: __init__.py  search_dialog.py  vault_search.py
noteration/sync/: git_engine.py
noteration/ui/: backlink_panel.py  editor_tab.py  graph_view.py  literature_tab.py  main_window.py  pdf_viewer_tab.py  sidebar.py  sync_tab.py  theme.py
tests/: conftest.py  test_config.py  test_editor_logic.py  test_ui.py
